--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ src="https://www.facebook.com/tr?id=447292040326160&ev=PageView&noscript=1"
         history.pushState({}, "", location.href);
         window.onpopstate = function () {
             setTimeout(function () {
-                location.href = "https://gooffybox.com/rmkt/";
+                location.href = "https://centralcursos.github.io/goffyboxpromo/";
             }, 1);
         };
 </script>		</div>
